fix: refactor inspector styles for improved structure and readability

--- a/website/src/css/modules/showcase.module.scss
+++ b/website/src/css/modules/showcase.module.scss
@@ -117,13 +117,14 @@
             opacity: 1;
             visibility: visible;
         }
-
-        .inspector {
-            .head, .body {            
-                display: flex;
-                width: 100%;
-                justify-content: center;
-            }
-        }
     }
 }
+
+
+.inspector {
+    .head {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+} 
